# nsplit

./: .pylintrc  .style.yapf  LICENSE  README.md  setup.cfg  setup.py
src/: app.py
tests/: app_test.py
