[metadata]
name = nfs-estepona
version = 0.2.0
url = https://github.com/estepona/naive-file-splitter
description = a simple utility tool to split a file into several smaller chunks at data level and merge them back
long_description = file : README.md
author = Binghuan Zhang
author_email = esteponawondering@gmail.com
keywords = file, split, utility
license = MIT
classifiers =
  Programming Language :: Python :: 3

[options]
zip_safe = True
packages = src
install_requires =
  click
  tqdm
  python_version >= "3.5"

[options.entry_points]
console_scripts =
  nfs = src.app:cli
