[metadata]
name = nfs-estepona
version = 0.2.3
url = https://github.com/estepona/naive-file-splitter
description = a simple CLI tool to split a file into several smaller chunks at data level and merge them back
long_description = file: README.md
long_description_content_type = text/markdown
author = Binghuan Zhang
author_email = esteponawondering@gmail.com
keywords = CLI, file, split, utility
license = MIT
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
zip_safe = True
packages = src
install_requires =
  click
  tqdm
  python_version >= "3.5"

[options.entry_points]
console_scripts =
  nfs = src.app:cli
